# ZezoAi-ai-hub-models

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  claude.md  pyproject.toml  ruff.toml  setup.py
cli/: README.md  pyproject.toml  ruff.toml
cli/qai_hub_models_cli/: cli.py  common.py  envvars.py  fetch.py  test_cli.py  utils.py  versions.py
cli/qai_hub_models_cli/_internal/: aws.py  utils.py
cli/qai_hub_models_cli/proto/: info_pb2.py  info_pb2.pyi  manifest_pb2.py  manifest_pb2.pyi  model_metadata_pb2.py  model_metadata_pb2.pyi  numerics_pb2.py  numerics_pb2.pyi  perf_pb2.py  perf_pb2.pyi  platform_pb2.py  platform_pb2.pyi  release_assets_pb2.py  release_assets_pb2.pyi
cli/qai_hub_models_cli/proto/shared/: precision_pb2.py  precision_pb2.pyi  range_pb2.py  range_pb2.pyi  runtime_pb2.py  runtime_pb2.pyi  tensor_spec_pb2.py  tensor_spec_pb2.pyi  tool_versions_pb2.py  tool_versions_pb2.pyi
cli/qai_hub_models_cli/proto_helpers/: __init__.py  _common.py  manifest.py  platform.py  platform_enums.py  release_assets.py
cli/qai_hub_models_cli/test/: conftest.py  test_cli.py  test_fetch.py  test_internal_releases.py  test_models.py  test_perf_numerics.py  test_proto_helpers.py  test_runtimes.py  test_utils.py  test_versions.py
src/: README.md  pyproject.toml  ruff.toml  setup.py
src/qai_hub_models/: __init__.py  asset_bases.yaml  common.py  conftest.py  devices_and_chipsets.yaml  global_requirements.txt  protocols.py  requirements-dev.txt  requirements.txt  similar_devices.yaml
src/qai_hub_models/cli/: __init__.py  configure.py  dispatch.py  proto_api.py
src/qai_hub_models/configs/: _info_yaml_enums.py  _info_yaml_llm_details.py  code_gen_yaml.py  devices_and_chipsets_yaml.py  info_yaml.py  manifest_yaml.py  metadata_yaml.py  model_metadata.py  numerics_yaml.py  perf_yaml.py  proto_helpers.py  release_assets_yaml.py  tensor_spec.py  tool_versions.py
src/qai_hub_models/datasets/: __init__.py  aokvqa.py  bsd300.py  bsd300_denoising.py  carvana.py  celebahq.py  cityscapes.py  coco.py  coco91class.py  coco_keypoints.py  cocobody.py  cofw.py  common_voice.py  eg1800.py  face_attrib_dataset.py  flickr1024.py  foot_track_dataset.py  gear_guard_dataset.py  hagrid.py  hpatches.py  human_faces.py  human_matting.py  interleaved.py  kitti.py  libri_speech.py  mpii.py  mpiigaze.py  nuscenes.py  nuscenes_bev.py  nyuv2.py  pascal_voc.py  reds.py  sav.py  stable_diffusion_calib.py  wikitext_masked.py
src/qai_hub_models/datasets/coco/: __init__.py  coco.py  coco_owl.py
src/qai_hub_models/evaluators/: audioset_evaluator.py  base_evaluators.py  classification_evaluator.py  colorization_evaluator.py  denoising_evaluator.py  depth_evaluator.py  detection_evaluator.py  electra_discriminator_evaluator.py  face_attrib_evaluator.py  facemap_3dmm_evaluator.py  hrnet_face_evaluator.py  inpaint_evaluator.py  kitti_evaluator.py  kldiv_evaluator.py  libri_speech_evaluator.py  llm_response_evaluator.py  maskedlm_evaluator.py  metrics.py  mmlu_evaluator.py  mmmu_evaluator.py  movenet_evaluator.py  mpigaze_evaluator.py  mteb_classification_evaluator.py  nuscenes_evaluator.py  owl_evaluator.py  panoptic_segmentation_evaluator.py  pose_evaluator.py  ppl_evaluator.py  segmentation_evaluator.py  semantic_kitti_evaluator.py  superpoint_evaluator.py  superres_evaluator.py  wholebody_pose_evaluator.py  yolo_segmentation_evaluator.py
src/qai_hub_models/models/: common.py  protocols.py
src/qai_hub_models/models/_shared/: common.py
src/qai_hub_models/scorecard/: __init__.py  device.py  envvars.py  execution_helpers.py  history.py  params.py  path_compile.py  path_profile.py  perf_yaml.py  scorecard_config_yaml.py
src/qai_hub_models/scripts/: aggregate_scorecard_results.py  apply_llm_perf_updates.py  autofill_info_yaml.py  autofill_manifest_yaml.py  build_release_proto.py  collect_scorecard_assets_results.py  collect_scorecard_numerics_results.py  collect_scorecard_results.py  combine_split_artifacts.py  compare_inference.py  compare_released_models.py  compile_proto.py  compute_mmlu_on_device.py  count_device_jobs.py  download_scorecard_results.py  file_scorecard_regression_issue.py  generate_global_readme.py  generate_global_requirements.py  generate_legal_summary.py  generate_llm_perf_metrics.py  generate_model_readme.py  generate_scorecard_device_yaml.py  identify_missing_design_assets.py  notify_nightly_failures.py  publish_release_assets.py  qairt_geniex_changed.py  release_huggingface_model_cards.py  run_codegen.py  run_geniex_bench_benchmarks.py  run_llama_cpp_benchmarks.py  setup_external_repos.py  split_torch_models.py  upload_asset_store.py  upload_scorecard_history.py
src/qai_hub_models/test/: test_assert_workbench_job_success.py
src/qai_hub_models/utils/: ai_hub_access.py  args.py  asset_loaders.py  aws.py  base_app.py  base_collection_model.py  base_config.py  base_dataset.py  base_model.py  base_multi_graph_collection_model.py  base_multi_graph_model.py  collection_model_helpers.py  compare.py  draw.py  envvar_bases.py  envvars.py  evaluate.py  export_result.py  export_without_hub_access.py  external_repo.py  fetch_prerelease_assets.py  hub_clients.py  image_processing.py  image_processing_3d.py  inference.py  input_spec.py  kwarg_helpers.py  llm_helpers.py  metrics.py  numerics_yaml.py  path_helpers.py  printing.py  private_asset_loaders.py  qai_hub_helpers.py  quantization.py  quantization_aimet_onnx.py  runtime_torch_wrapper.py  test_compare.py  test_testing_export_eval.py  testing.py  (+5 more)
(+4090 files in other folders)
