[build-system]
requires = ["setuptools>=80,<=82.0.1", "setuptools-scm>=9,<=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qai_hub_models"
# "dependencies" and "optional-dependencies" are provided by setup.py
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = "README.md"
description = "Popular Machine Learning models optimized for Qualcomm chipsets."
requires-python = ">=3.10, <3.14"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Qualcomm® Technologies, Inc", email = "ai-hub-support@qti.qualcomm.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://aihub.qualcomm.com/models"
GitHub = "https://github.com/quic/ai-hub-models"
Issues = "https://github.com/quic/ai-hub-models/issues"
Slack = "https://aihub.qualcomm.com/community/slack"
HuggingFace = "https://huggingface.co/qualcomm"

[tool.setuptools]
py-modules = []
include-package-data = false

[tool.setuptools.package-data]
qai_hub_models = ["**/*.yaml", "**/*.txt", "**/*.json", "**/*.diff", "**/*.md", "**/*.j2", "**/*.env", "**/*.csv"]

[tool.setuptools_scm]
root = ".."
version_file = "qai_hub_models/_version.py"

[tool.pydoclint]
style = 'numpy'
arg-type-hints-in-docstring = false
skip-checking-short-docstrings = true
skip-checking-raises = true
allow-init-docstring = true
check-style-mismatch = true
exclude = 'src/qai_hub_models/extern/.*|src/qai_hub_models/models/llama_v2_7b_chat/modeling_llama\.py'

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["models/.*/external_repos/.*/", "models/_shared/.*/external_repos/.*/"]

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"
testpaths = "qai_hub_models"
norecursedirs = "build"
python_files = ["tests.py", "test_*.py", "test.py"]
filterwarnings = [
    "ignore::DeprecationWarning:torchvision.*:",
]
markers = [
    "slow: marks tests as slow",
    "slow_cloud: marks test as slow and cloud-dependent",
    "demo: marks tests that run demo for models",
    "evaluate: marks tests that run model evaluation",
    "compile: marks tests that run compile jobs",
    "compile_ram_intensive: marks tests that run compile jobs on GPU host (more RAM is needed.)",
    "pre_quantize_compile: marks tests that run pre-quantize ONNX compile jobs",
    "link: marks tests that run link jobs (DLC to context binary)",
    "qdc: marks tests that run on QDC",
    "profile: marks tests that run profile jobs",
    "inference: marks tests that run inference jobs",
    "export: marks tests that run full export scripts",
    "unmarked: default marker added to any job with no markers",
    "nightly: marks tests to run as part of nightly GPU test suite",
    "compute_device_accuracy: marks tests to run as on-device accuracy suite",
]

[[tool.mypy.overrides]]
module = "google.*"
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "qai_hub_models.*"
disable_error_code = ["type-abstract", "override", "method-assign"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "qai_hub_models.models.*.conftest"
ignore_errors = true

[[tool.mypy.overrides]]
module = "qai_hub_models.extern.qdc.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "qai_hub_models.models._shared.llm.sha_dynamic_kvcache"
ignore_errors = true

[[tool.mypy.overrides]]
module = "qai_hub_models.models.llama_v2_7b_chat.modeling_llama"
ignore_errors = true
